--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -17,3 +17,9 @@ spring.mail.password=vuongtien294
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 mail.smtp.debug=true
+
+#gui mail bang templace
+config.mail.host=smtp.gmail.com
+config.mail.port=587
+config.mail.username=vuongtien10a4@gmail.com
+config.mail.password=vuongtien294
