--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -105,6 +105,21 @@
 			<artifactId>thymeleaf-spring5</artifactId>
 			<version>3.0.11.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-http44</artifactId>
+			<version>1.29.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-taglib</artifactId>
+			<version>1.14.0</version>
+		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>com.cloudinary</groupId>-->
+<!--			<artifactId>cloudinary-http44</artifactId>-->
+<!--			<version>[Cloudinary API version, e.g. 1.1.3]</version>-->
+<!--		</dependency>-->
 
 	</dependencies>
 
