--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -23,3 +23,8 @@ config.mail.host=smtp.gmail.com
 config.mail.port=587
 config.mail.username=vuongtien10a4@gmail.com
 config.mail.password=vuongtien294
+
+#cloudinary
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
