Thêm api review

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -10,13 +10,13 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 #mail
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=vuongtien2942000@gmail.com
-spring.mail.password=vuongtien294
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-mail.smtp.debug=true
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=vuongtien2942000@gmail.com
+#spring.mail.password=vuongtien294
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#mail.smtp.debug=true
 
 #gui mail bang templace
 config.mail.host=smtp.gmail.com
