thêm api tạo file pdf

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -28,3 +28,7 @@ config.mail.password=vuongtien294
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
+
+#pdf
+pdf.directory=D:\\SimpleSolution\\
+
