--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -121,6 +121,12 @@
 <!--			<version>[Cloudinary API version, e.g. 1.1.3]</version>-->
 <!--		</dependency>-->
 
+		<dependency>
+			<groupId>org.xhtmlrenderer</groupId>
+			<artifactId>flying-saucer-pdf</artifactId>
+			<version>9.1.22</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
