--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -12,8 +12,8 @@ spring.jpa.hibernate.ddl-auto=update
 #mail
 #spring.mail.host=smtp.gmail.com
 #spring.mail.port=587
-#spring.mail.username=vuongtien2942000@gmail.com
-#spring.mail.password=vuongtien294
+#spring.mail.username=
+#spring.mail.password=
 #spring.mail.properties.mail.smtp.auth=true
 #spring.mail.properties.mail.smtp.starttls.enable=true
 #mail.smtp.debug=true
@@ -21,8 +21,8 @@ spring.jpa.hibernate.ddl-auto=update
 #gui mail bang templace
 config.mail.host=smtp.gmail.com
 config.mail.port=587
-config.mail.username=vuongtien10a4@gmail.com
-config.mail.password=vuongtien294
+config.mail.username=
+config.mail.password=
 
 #cloudinary
 spring.servlet.multipart.max-file-size=10MB
